# maim_db

./: .env  .env.example  .gitignore  AGENT_ID_GUIDE.md  CHAT_STREAM_CALLS_COVERAGE_2025-12-06.md  CHAT_STREAM_TENANT_ANALYSIS.md  CLAUDE.md  CONFIGURATION_INITIALIZATION_TRAP_ANALYSIS.md  DATABASE_MODELS.md  Dockerfile  MULTI_TENANT_MIGRATION_STRATEGY.md  MULTI_TENANT_PROGRESS_2025-12-06.md  MULTI_TENANT_VERIFICATION_2025-12-06.md  PLUGIN_EXECUTION_ANALYSIS.md  PLUGIN_WORKFLOW_ANALYSIS.md  README.md  README_DB.md  REFACTOR_STATUS.md  __init__.py  clean_ports.py  db_manager.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  start.bat  start.sh  start_all_docker.sh  start_db.py  sync_repos.py
config/: .env  docker-compose.yml  maimconfig.env  model_config.toml  postgres.json
docs/: ASYNC_DRIVER_NECESSITY_ANALYSIS.md  DISK_STORAGE_DB_MIGRATION_SUMMARY_2025-12-08.md  MULTI_TENANT_MIGRATION_STRATEGY.md  PLUGIN_API_ANALYSIS.md  PLUGIN_FACTORY_AND_ISOLATION_DESIGN.md  QUICK_START.md  README_SQLITE.md  TEST_GUIDE.md  full_stack_guide.md  guide.md
scripts/: create_v2_tables.py  demo_v2_models.py  init-postgres.sql  migrate_all_dbs.py  migrate_to_v2_models.py  run_docker_interactive.py  simple_sqlite_test.py  start_backends.py  test_database_connection.py  test_sqlite_startup.py
src/: __init__.py
src/core/: __init__.py  async_models.py  database.py  settings.py
src/core/models/: __init__.py  agent_config.py  system_v2.py
src/maim_db/: __init__.py  _api.py  init_db.py
src/maim_db/core/: agent_config_manager.py  async_models.py  config.py  context_manager.py  database.py  settings.py
src/maim_db/core/models/: __init__.py  agent_config.py  business.py  maimbot_models.py  system.py  system_v2.py
src/maim_db/maimconfig_models/: connection.py  models.py
src/maimconfig_models/: connection.py  models.py
template/: .env
test/: check_fields.py  test_e2e_web_to_reply.py  test_integration_maimconfig_maimbot.py  verify_reply.py  verify_reply_from_key.py  verify_reply_with_key.py  verify_secure_model_config.py
